tests/compile/command_modules/compute.expected
#ifdef __clang__
In file included from compute.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:89:17: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: params_a
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
compute.cpp:110:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eCompute>, rcgp::NormalEntry<norm_entry{{1, &params_a, 0}, 1, {{0, 0}, {0, 0}}, &ref_name_storage._M_elems[0]}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eCompute>>' requested here
  110 |                 | dispatch(64);
      |                 ^
1 error generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
In file included from include/rcgp-meta.hpp:9,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/compute.cpp:1:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eCompute>, NormalEntry<norm_entry{norm_key{rcgp::KeyKind::eRef, ((void*)(& params_a)), rcgp::Topology::eTriangleList}, rcgp::NormOp::eDep, norm_bar{norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}, norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}}, ((const char*)(& ref_name_storage<params_a>.std::array<char, 9>::_M_elems))}>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/compute.cpp:110:16:   required from here
  110 |                 | dispatch(64);
      |                              ^
include/meta/commands.hpp:89:31: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: params_a
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
  • 'false' evaluates to false
#elif __GNUC__ == 15
In file included from include/rcgp-meta.hpp:9,
                 from include/rcgp.hpp:4,
                 from tests/compile/command_modules/compute.cpp:1:
include/meta/commands.hpp: In instantiation of 'auto rcgp::operator|(const Commands<false, Effects ...>&, const Commands<false, B ...>&) [with A = {ActivatePipeline<rcgp::PipelineKind::eCompute>, NormalEntry<norm_entry{norm_key{rcgp::KeyKind::eRef, ((void*)(& params_a)), rcgp::Topology::eTriangleList}, rcgp::NormOp::eDep, norm_bar{norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}, norm_phase{rcgp::PipelineStage::eNone, rcgp::ResourceAccess::eNone}}, ((const char*)(& ref_name_storage<params_a>.std::array<char, 9>::_M_elems))}>}; B = {TerminalSentinel<rcgp::PipelineKind::eCompute>}]':
tests/compile/command_modules/compute.cpp:110:16:   required from here
  110 |                 | dispatch(64);
      |                              ^
include/meta/commands.hpp:89:31: error: static assertion failed: commands combinator detected dispatch before all dependencies
were provided:
	missing dependencies: params_a
   89 |                 static_assert(false, norm.second);
      |                               ^~~~~
include/meta/commands.hpp:89:31: note: 'false' evaluates to false
#endif
#endif
